unpackaged/main/default/objects/WorkType/fields/Checkbox_Required__c.field-meta.xml
<CustomField>
    <fullName>Checkbox_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Checkbox Required</label>
    <type>Checkbox</type>
</CustomField>