unpackaged/main/default/objects/WorkType/fields/FSL__Due_Date_Offset__c.field-meta.xml
<CustomField>
    <fullName>FSL__Due_Date_Offset__c</fullName>
    <description>Minutes</description>
    <inlineHelpText>Calculates the Due Date by adding Minutes to the Service creation time, reflecting the organisation&#39;s internal SLA</inlineHelpText>
    <label>Due Date Offset</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>