unpackaged/main/default/objects/WorkType/fields/SDO_SFS_Self_Service_Work_Type__c.field-meta.xml
<CustomField>
    <fullName>SDO_SFS_Self_Service_Work_Type__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check this box to indicate that this Work Type will also be visible to a customer who is self scheduling.</description>
    <inlineHelpText>Check this box to indicate that this Work Type will also be visible to a customer who is self scheduling.</inlineHelpText>
    <label>Self Service Work Type</label>
    <type>Checkbox</type>
</CustomField>