unpackaged/main/default/objects/WorkType/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Field Service Lightning (FSL)</fullName>
                <label>Salesforce Field Service(SFS)</label>
            </value>
            <value>
                <fullName>Lightning Scheduler (LS)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>