unpackaged/main/default/objects/WorkType/listViews/FSL_Work_Types.listView-meta.xml
<ListView>
    <fullName>FSL_Work_Types</fullName>
    <columns>Name</columns>
    <columns>DurationType</columns>
    <columns>DurationInMinutes</columns>
    <columns>FSL__Due_Date_Offset__c</columns>
    <columns>ShouldAutoCreateSvcAppt</columns>
    <columns>EstimatedDuration</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Field Service Lightning (FSL)</value>
    </filters>
    <label>FSL Work Types</label>
</ListView>