unpackaged/main/default/objects/WorkType/listViews/LS_Work_Types.listView-meta.xml
<ListView>
    <fullName>LS_Work_Types</fullName>
    <columns>Name</columns>
    <columns>EstimatedDuration</columns>
    <columns>DurationType</columns>
    <columns>DurationInMinutes</columns>
    <columns>Type__c</columns>
    <columns>Description</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>Lightning Scheduler (LS)</value>
    </filters>
    <label>LS Work Types</label>
</ListView>